# cargo-thanks

./: Cargo.toml
src/: main.rs
