[package]
name = "cargo-thanks"
version = "0.1.3"
description = "a cargo subcommand for giving thanks"
authors = ["softprops <d.tangren@gmail.com>"]
homepage = "https://github.com/softprops/cargo-thanks"
repository = "https://github.com/softprops/cargo-thanks"
keywords = ["hyper", "github"]
license = "MIT"
readme = "README.md"

[dependencies]
env_logger = "0.9"
log = "0.4"
clap = "2"
yansi = "0.5"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
cargo_metadata = "0.14"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.12"
tokio-core = "0.1"
url = "1.7.1"
url_serde = "0.2"
hubcaps = "0.6"
